--- a/calendario/templates/calendario/evento-modal.html
+++ b/calendario/templates/calendario/evento-modal.html
@@ -71,7 +71,7 @@
       location: $('#event-modal input[name="event-location"]').val(),
       atividade: $('#event-modal input[name="event-atividade"]').val(),
       descricao: $('#event-modal textarea[name="event-descricao"]').val(),
-      observation: $('#event-modal input[name="event-observation"]').val(),
+      observacao: $('#event-modal input[name="event-observacao"]').val(),
       responsavel: $('#event-modal select[name="event-responsavel"]').val(),
       material: $('#event-modal select[name="event-material"]').val(),
       material2: $('#event-modal select[name="event-material2"]').val(),
@@ -176,7 +176,7 @@
                 dataSource[i].location = event.location;
                 dataSource[i].atividade = event.atividade;
                 dataSource[i].descricao = event.descricao;
-                dataSource[i].observation = event.observation;
+                dataSource[i].observacao = event.observacao;
                 dataSource[i].responsavel = event.responsavel;
                 dataSource[i].material = event.material;
                 dataSource[i].material2 = event.material2;
@@ -343,11 +343,11 @@
             </div>
 
             <div class="form-group row">
-              <label for="event-observation" class="col-sm-4 control-label">
+              <label for="event-observacao" class="col-sm-4 control-label">
                 {% lng "Observações" "Observations" %}
               </label>
               <div class="col-sm-8">
-                <input id="event-observation" name="event-observation" type="text" class="form-control" maxlength="{% max_length Evento "observacao" %}">
+                <input id="event-observacao" name="event-observacao" type="text" class="form-control" maxlength="{% max_length Evento "observacao" %}">
               </div>
             </div>
 
