--- a/documentos/templates/documentos/tabela_atas.html
+++ b/documentos/templates/documentos/tabela_atas.html
@@ -17,10 +17,9 @@
 
   {% if user.admin %}
     <span class="esconder">
-      <a
-        href="#"
-        class="open-documento"
-        data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
+      <a href="#"
+       class="open-documento"
+       data-url="{% url 'adiciona_documento_tipo' tipo.sigla %}"
         ><i class="fas fa-plus"></i> 
          Adicionar nova Ata</a
       >
