--- a/templates/disciplina-modal.html
+++ b/templates/disciplina-modal.html
@@ -11,7 +11,7 @@
 
   $(document).on("click", ".link-disciplina", function (e) {
     e.preventDefault();
-    var $popup = $("#popup");
+    var $popup = $("#popup_disciplina");
     proposta = $(this).data("proposta");
     url = $(this).data("url");
 
@@ -22,15 +22,7 @@
 
 </script>
 
-
-<!-- Modal -->
-<div class="modal fade" id="popup" role="dialog">
-  <div class="modal-dialog modal-lg" role="document">
-    <div id="modal-content" class="modal-content">
-    </div>
-  </div>
-</div>
-
+{% include "janela_modal.html" with nome="popup_disciplina" %}
 
 <script>
 
