--- a/templates/annotation-modal2.html
+++ b/templates/annotation-modal2.html
@@ -12,7 +12,7 @@
   
   $(document).on("click", ".open-annotation", function (e) {
     e.preventDefault();
-    var $popup = $("#popup_anotacao2");
+    var $popup = $("#popup");
     anotacao = $(this).data("anotacao");
     url = $(this).data("url");
 
@@ -28,7 +28,7 @@
 
 </script>
 
-{% include "janela_modal.html" with nome="popup_anotacao2" %}
+{% comment %} {% include "janela_modal.html" with nome="popup_anotacao2" %} {% endcomment %}
 
 <script>
 
