--- a/templates/base.html
+++ b/templates/base.html
@@ -59,9 +59,7 @@
           </a>
         {% endif %}
 
-        <a href="{% url 'info'%}">
-          Informações
-        </a>
+        <a href="{% url 'info'%}">{% lng "Informações" "Information" %}</a>
         {% if user.is_authenticated %}
           <a href="{% url 'perfil' %}">
             {% lng "Perfil" "Profile" %}          </a>
@@ -140,5 +138,13 @@
     </script>
   {% endif %}
   
+  {% comment %} {% include "janela_modal.html" with nome="popup" %} {% endcomment %}
+  <div class="modal fade" id="popup" role="dialog">
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="modal-content">
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
