--- a/templates/organizacao-modal.html
+++ b/templates/organizacao-modal.html
@@ -11,7 +11,7 @@
 
   $(document).on("click", ".link-organizacao", function (e) {
     e.preventDefault();
-    var $popup = $("#popup_organizacao");
+    var $popup = $("#popup");
     proposta = $(this).data("proposta");
     url = $(this).data("url");
 
@@ -22,7 +22,7 @@
 
 </script>
 
-{% include "janela_modal.html" with nome="popup_organizacao" %}
+{% comment %} {% include "janela_modal.html" with nome="popup_organizacao" %} {% endcomment %}
 
 <script>
 
