--- a/academica/templates/academica/includes/bloco_banca.html
+++ b/academica/templates/academica/includes/bloco_banca.html
@@ -11,19 +11,13 @@
   <ul class="membros_banca" style="padding-left: 18px;">
     {% for membro in membros %}
       <li style="line-height: 1.0; margin-bottom: 0.5em;">
-        {% if pequeno %}
-          <small>
-        {% endif %}
+        {% if pequeno %}<small>{% endif %}
         {% if user.prof_a %}
           <a class="imprimir" href="{% url 'user_detail' membro.id %}">  {% comment %} target="_blank" {% endcomment %}
         {% endif %}
         {{membro.get_full_name}}
-        {% if user.prof_a %}
-          </a>
-        {% endif %}
-        {% if pequeno %}
-          </small>
-        {% endif %}
+        {% if user.prof_a %}</a>{% endif %}
+        {% if pequeno %}</small>{% endif %}
       </li>
     {% endfor %}
   </ul>
