--- a/templates/toggle_anteriores.html
+++ b/templates/toggle_anteriores.html
@@ -7,6 +7,6 @@
 <script>
   $("#Anteriores").on("click", function() {
     $(".Anteriores").toggle(200);
-    $("span", this).toggleClass("seta-baixo seta-cima");
+    $("span.seta-baixo", this).toggleClass("seta-baixo seta-cima");
   });
 </script>
