--- a/projetos/static/css/tab_arrend.css
+++ b/projetos/static/css/tab_arrend.css
@@ -1,12 +1,21 @@
 .arredondado {
 	table-layout: fixed;
-	border-collapse:separate;
+	border-collapse: separate;
 	border-spacing: 4px 10px;
 	margin-left: 6px;
 	margin-right: 12px;
 	margin-bottom: 10px;
 	border: 0px;
 	width: auto;
+}
+
+@media only screen and (max-width: 740px) {
+	.arredondado {
+		border-spacing: 0px 8px;
+    margin-left: 0px;
+	  margin-right: 0px;
+    width: 100%;
+	}
 }
 
 .arredondado tr {
