--- a/templates/cabecalho_projeto.html
+++ b/templates/cabecalho_projeto.html
@@ -69,12 +69,12 @@
     {% comment %} {% endif %} {% endcomment %}
 
     {% if com_grupo %}
-      <span style="display: inline-block; margin-top: 6px;">
+      <span style="display: inline-block; margin-top: 2px;">
         <b>{% lng "Grupo" "Group" %}:</b>
       </span>
       <ul>
         {% for alocacao in projeto.alocacao_set.all %}
-          <li>
+          <li style="margin-bottom: 0px;">
             <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">
               {{alocacao.aluno.user.get_full_name}}
             </a> 
@@ -143,7 +143,7 @@
       </span>
       <ul>
         {% for alocacao in projeto.alocacao_set.all %}
-          <li>
+          <li style="margin-bottom: 0px;">
             {{alocacao.aluno.user.get_full_name}}
             <span class="curso">
               <span class="texto-longo">[{{ alocacao.aluno.curso2 }}]</span>
