--- a/templates/sem_banca.html
+++ b/templates/sem_banca.html
@@ -18,7 +18,7 @@
             <b>{% lng "Mensagem" "Message" %}:</b>
             <a data-toggle="tooltip" data-html="true" animation="true" title="Janela de Mensagem" class="open-modal"
               data-url="{% url 'mensagem_email' 'banca_projeto' projeto.pk %}" href="{% url 'mensagem_email' 'banca_projeto' projeto.pk %}"> 
-              avaliadores
+              {% lng "avaliadores" "examiners" %}
             </a>
           </div>
 
